Changed slider from 2000 to 5000 via Iraj's request. Added some body text

--- a/index.html
+++ b/index.html
@@ -67,7 +67,30 @@
         </footer>      
     </div>
 <script src="js/slider.js"></script>  
-  <!-- Ended by IRAJ, Date:12/19/2019 -->    
+  <!-- Ended by IRAJ, Date:12/19/2019 --> 
+  <!-- Michelle.RH began her work here, Date:12/19/2019 -->   
+  <section>
+    <h1>Welcome to Sauti Africa</h1>
+    <div class= "Who">
+        <h1>Who we are & What we do</h1>
+        <p>Sauti Africa empowers small business owners to improve their business and economic opportunities....</p>
+    </div>
+</section>
+<section>
+    <div class="infoBox">
+        <h1>Empowering People</h1>
+        <p>How do we empower people..women?</p>
+    </div>
+    <div class="infoBox">
+        <h1>Connecting Communities</h1>
+        <p>How do we connect communities? Cross-border partnerships</p>
+    </div>
+    <div class="infoBox">
+        <h1>Growing Businesses</h1>
+        <p>How are businesses grown through this program?</p>
+    </div>
+</section>
 </body>
+<!-- Michelle.RH ended her work here, Date:TBD --> 
 </html>
 
