Layout and color to bottom of body

--- a/index.html
+++ b/index.html
@@ -69,27 +69,29 @@
 <script src="js/slider.js"></script>  
   <!-- Ended by IRAJ, Date:12/19/2019 --> 
   <!-- Michelle.RH began her work here, Date:12/19/2019 -->   
-  <section>
-    <h1>Welcome to Sauti Africa</h1>
-    <div class= "Who">
-        <h1>Who we are & What we do</h1>
-        <p>Sauti Africa empowers small business owners to improve their business and economic opportunities....</p>
-    </div>
-</section>
-<section>
-    <div class="infoBox">
-        <h1>Empowering People</h1>
-        <p>How do we empower people..women?</p>
-    </div>
-    <div class="infoBox">
-        <h1>Connecting Communities</h1>
-        <p>How do we connect communities? Cross-border partnerships</p>
-    </div>
-    <div class="infoBox">
-        <h1>Growing Businesses</h1>
-        <p>How are businesses grown through this program?</p>
-    </div>
-</section>
+  <div class="lowerBody">
+    <section>
+      <h1>Welcome to Sauti Africa</h1>
+      <div class= "Who">
+          <h2>Who we are & What we do</h2>
+          <p>Sauti Africa empowers small business owners to improve their business and economic opportunities to grow out of poverty. It enables these business owners to create listings for items they have for sale.</p>
+      </div>
+  </section>
+  <section class="infoBoxes">
+      <div>
+          <h4>Empowering People</h4>
+          <p>How do we empower people..women?</p>
+      </div>
+      <div>
+          <h4>Connecting Communities</h4>
+          <p>How do we connect communities? Cross-border partnerships</p>
+      </div>
+      <div>
+          <h4>Growing Businesses</h4>
+          <p>How are businesses grown through this program?</p>
+      </div>
+  </section>
+</div>
 </body>
 <!-- Michelle.RH ended her work here, Date:TBD --> 
 </html>
