Finalized layout until copywrite. Adjusted some font sizes

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 <div class="lowerBody">
   <section>
     <h1>Welcome to Sauti Africa</h1>
-    <div class= "Who">
-        <h2>Who we are & What we do</h2>
+    <div>
+        <h3>Who we are & What we do</h3>
         <p>Sauti Africa empowers small business owners to improve their business and economic opportunities to grow out of poverty. It enables these business owners to create listings for items they have for sale.</p>
     </div>
 </section>
