--- a/about.html
+++ b/about.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Sauti Africa</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="css/index.css">
+   
 </head>
 <body>
     <div class="container">
@@ -13,8 +14,8 @@
 
           <nav class="nav_bar">
             <a class="#" href="#">Services</a> 
-            <a href="#">SignIn</a>
-            <a href="#">SignUp</a> 
+            <a href="signin.html">SignIn</a>
+            <a href="signup.html">SignUp</a> 
             <a class="current" href="about.html">About Us</a>  
             <a  href="index.html">Home</a> 
             <div class="logo-img"> 
@@ -22,21 +23,117 @@
             </div>  
           </nav>
         </header>
-        <section>
-            <div class="card-container" style="width: 20%;">
-                <img src="img/" alt="Avatar" style="width:100%;height:300px;">
-                <div class="container">
-                  <h4><b>Iraj Kanwal</b></h4> 
-                  <p>UI Developer</p> 
+        <div class="main-heading">
+          <h1>Meet the team</h1>
+        </div>
+        <section class="card-wrapper">
+            <div class="card-container">
+              <div class="card-img"> 
+                <img src="img/Dummy-img.png" alt="Avatar">
+              </div>
+              <div class="card-text card1">
+                <h4><b>Joshua Harris</b></h4> 
+                <p>Project Lead</p>
+                <div class="contact">
+                  <a target="_blank" href="https://github.com/x-zen" ><i class="fab fa-github-square"></i></a>       
+                  <a target="_blank" href="#" ><i class="fab fa-linkedin"></i></a>
+                  <a  href="#" ><i class="fas fa-at"></i></a>
                 </div>
+                
+              </div>
             </div>
+            <div class="card-container">
+              <div class="card-img"> 
+                <img src="img/Intro-Iraj.jpg" alt="Avatar" >
+              </div>
+              <div class="card-text card2">
+                <h4><b>Iraj Kanwal</b></h4> 
+                <p>UI Developer</p> 
+                <div class="contact">
+                  <a target="_blank" href="https://github.com/ikanwal" ><i class="fab fa-github-square"></i></a>       
+                  <a target="_blank" href="https://www.linkedin.com/in/iraj-kanwal-156472113/" ><i class="fab fa-linkedin"></i></a>
+                  <a  href="mailto:kanwaliraj8@hmail.com" ><i class="fas fa-at"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="card-container" >
+              <div class="card-img"> 
+                  <img src="img/Dummy-img.png" alt="Avatar">
+              </div>
+              <div class="card-text card3">
+                  <h4><b>Michelle RH</b></h4> 
+                  <p>UI Developer</p> 
+                  <div class="contact">
+                    <a target="_blank" href="https://github.com/rhmichelle" ><i class="fab fa-github-square"></i></a>       
+                    <a target="_blank" href="#" ><i class="fab fa-linkedin"></i></a>
+                    <a  href="#" ><i class="fas fa-at"></i></a>
+                  </div>
+              </div>
+            </div>
+            <div class="card-container" >
+              <div class="card-img"> 
+                <img src="img/Icon-Bright.jpg" alt="Avatar" >
+              </div>
+              <div class="card-text card4">
+                <h4><b>Kenneth Diehl</b></h4> 
+                <p>React I Developer</p> 
+                <div class="contact">
+                  <a target="_blank" href="https://github.com/diehlkj" ><i class="fab fa-github-square"></i></a>       
+                  <a target="_blank" href="https://www.linkedin.com/in/diehlkj" ><i class="fab fa-linkedin"></i></a>
+                  <a  href="mailto:diehlkj.99@gmail.com "><i class="fas fa-at"></i></a>
+                </div>
+              </div>
+            </div>
+          <div class="card-container" >
+            <div class="card-img">  
+              <img src="img/Dummy-img.png" alt="Avatar" >
+            </div>
+            <div class="card-text card5">
+              <h4><b>Daniel Morales</b></h4> 
+              <p>React I Developer</p> 
+              <div class="contact">
+                <a target="_blank" href="https://github.com/PrinceD96" ><i class="fab fa-github-square"></i></a>       
+                <a target="_blank" href="#" ><i class="fab fa-linkedin"></i></a>
+                <a  href="mailto:daniel.a.moralesalt@gmail.com" ><i class="fas fa-at"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card-container" >
+            <div class="card-img"> 
+              <img src="img/Dummy-img.png" alt="Avatar">
+            </div>
+            <div class="card-text card6">
+              <h4><b>Christian Mack</b></h4> 
+              <p>React II Developer</p> 
+              <div class="contact">
+                <a target="_blank" href="https://github.com/SFMack" ><i class="fab fa-github-square"></i></a>       
+                <a target="_blank" href="#" ><i class="fab fa-linkedin"></i></a>
+                <a  href="mailto:sfcamack@icloud.com" ><i class="fas fa-at"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card-container" >
+            <div class="card-img"> 
+              <img src="img/Dummy-img.png" alt="Avatar">
+            </div>
+            <div class="card-text card7">
+              <h4><b>Eva Gurtovaya</b></h4> 
+              <p>Backend Developer</p> 
+              <div class="contact">
+                <a target="_blank" href="https://github.com/EvaGurtovaia" ><i class="fab fa-github-square"></i></a>       
+                <a target="_blank" href="#" ><i class="fab fa-linkedin"></i></a>
+                <a  href="mailto:eva.gurtovaya@gmail.com" ><i class="fas fa-at"></i></a>
+              </div>
+            </div>
+          </div> 
         </section>
         <footer>
-            <nav class="footer_nav">
-              <p>Terms and Conditions | Company Info | © Sauti Africa 2019. All rights reserved.
-              </p>
-            </nav>
-          </footer>  
+          <nav class="footer_nav">
+            <p>Terms and Conditions | Company Info | © Sauti Africa 2019. All rights reserved.
+            </p>
+          </nav>
+        </footer>  
     </div>    
 </body>
+<script src="https://kit.fontawesome.com/a076d05399.js"></script> 
 <html>
