Did some media query work. Changed some colors. Added cupcake ipsum

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 <section class="infoBoxes">
     <div>
         <h4>Empowering People</h4>
-        <p>How do we empower people..women?</p>
+        <p>How do we empower people..women? Cupcake ipsum dolor sit amet. Chocolate cake topping cotton candy cheesecake macaroon croissant sweet roll sesame snaps. Lollipop cake halvah. Oat cake cheesecake brownie tart.</p>
     </div>
     <div>
         <h4>Connecting Communities</h4>
-        <p>How do we connect communities? Cross-border partnerships</p>
+        <p>How do we connect communities? Cross-border partnerships. Cupcake ipsum dolor sit amet. Chocolate cake topping cotton candy cheesecake macaroon croissant sweet roll sesame snaps. Lollipop cake halvah. Oat cake cheesecake brownie tart.</p>
     </div>
     <div>
         <h4>Growing Businesses</h4>
-        <p>How are businesses grown through this program?</p>
+        <p>How are businesses grown through this program? Cupcake ipsum dolor sit amet. Chocolate cake topping cotton candy cheesecake macaroon croissant sweet roll sesame snaps. Lollipop cake halvah. Oat cake cheesecake brownie tart.</p>
     </div>
 </section>
 </div>
