added max-width to tablet query. Changed colors on bottom half of page. Added some ipsum text. Added box shadow. Changed color on fotter.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h1>Welcome to Sauti Africa</h1>
     <div>
         <h3>Who we are & What we do</h3>
-        <p>Sauti Africa empowers small business owners to improve their business and economic opportunities to grow out of poverty. It enables these business owners to create listings for items they have for sale.</p>
+        <p>Sauti Africa empowers small business owners to improve their business and economic opportunities to grow out of poverty. It enables these business owners to create listings for items they have for sale. Cupcake ipsum dolor sit amet. Chocolate cake topping cotton candy cheesecake macaroon croissant sweet roll sesame snaps. Lollipop cake halvah. Oat cake cheesecake brownie tart.</p>
     </div>
 </section>
 <section class="infoBoxes">
