add responiveness in about html and change some css styling also modifies sigin sign up page and add responsiveness for tablet and mobile mode

--- a/about.html
+++ b/about.html
@@ -9,13 +9,12 @@
    
 </head>
 <body>
-    <div class="container">
+    <div class="container about-page">
         <header>
 
           <nav class="nav_bar">
-            <a class="#" href="#">Services</a> 
-            <a href="signin.html">SignIn</a>
-            <a href="signup.html">SignUp</a> 
+            <a class="signIn" href="signin.html">SignIn</a>
+            <a class="signUp" href="signup.html">SignUp</a> 
             <a class="current" href="about.html">About Us</a>  
             <a  href="index.html">Home</a> 
             <div class="logo-img"> 
@@ -29,7 +28,7 @@
         <section class="card-wrapper">
             <div class="card-container">
               <div class="card-img"> 
-                <img src="img/Dummy-img.png" alt="Avatar">
+                <img src="img/PL.jpg" alt="Avatar">
               </div>
               <div class="card-text card1">
                 <h4><b>Joshua Harris</b></h4> 
@@ -37,7 +36,7 @@
                 <div class="contact">
                   <a target="_blank" href="https://github.com/x-zen" ><i class="fab fa-github-square"></i></a>       
                   <a target="_blank" href="#" ><i class="fab fa-linkedin"></i></a>
-                  <a  href="#" ><i class="fas fa-at"></i></a>
+                  <a  href="mailto:jdharris.x@gmail.com" ><i class="fas fa-at"></i></a>
                 </div>
                 
               </div>
