--- a/signin.html
+++ b/signin.html
@@ -11,9 +11,8 @@
     <div class="container">
         <header>
            <nav class="nav_bar">
-                <a class="#" href="#">Services</a> 
-                <a class="current" href="signin.html">Sign In</a>
-                <a href="signup.html">Sign Up</a> 
+                <a class="current SignIn" href="signin.html">Sign In</a>
+                <a class="signUp" href="signup.html">Sign Up</a> 
                 <a href="about.html">About Us</a>  
                 <a  href="index.html">Home</a> 
                 <div class="logo-img"> 
