added icons to images folder and to mobile navigation bar

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
    
           <nav class="nav_bar">
            <a class="#" href="#">Services</a> 
-            <a class="signIn" href="signin.html">Sign In</a>
-            <a class="signUp" href="signup.html">Sign Up</a> 
-            <a href="about.html">About Us</a>  
-            <a class="current" href="index.html">Home</a> 
+            <a class="signIn" href="signin.html">Sign In
+              <img class= "icon" src= "img/Icons/icons8-enter-50.png" alt= "Arrow Going Inside">
+            </a>
+            <a class="signUp" href="signup.html">Sign Up
+              <img class= "icon" src= "img/Icons/icons8-sign-up-50.png" alt= "Pencil with Squiggle Mark">
+            </a> 
+            <a href="about.html">About Us
+              <img class= "icon" src= "img/Icons/icons8-about-50.png" alt= "Informational lowercase i">
+            </a>  
+            <a class="current" href="index.html">Home
+              <img class= "icon" src= "img/Icons/icons8-home-50.png" alt= "A House">
+            </a> 
             <div class="logo-img"> 
                <img class="logo" src="img/fox-5.png" alt="Sauti's Africa logo.">
            </div>  
