--- a/index.html
+++ b/index.html
@@ -13,22 +13,14 @@
     <div class="container">
         <header>
    
-          <nav class="nav_bar">
-           <a class="#" href="#">Services</a> 
-            <a class="signIn" href="signin.html">Sign In
-              <img class= "icon" src= "img/Icons/icons8-enter-50.png" alt= "Arrow Going Inside">
-            </a>
-            <a class="signUp" href="signup.html">Sign Up
-              <img class= "icon" src= "img/Icons/icons8-sign-up-50.png" alt= "Pencil with Squiggle Mark">
-            </a> 
-            <a href="about.html">About Us
-              <img class= "icon" src= "img/Icons/icons8-about-50.png" alt= "Informational lowercase i">
-            </a>  
-            <a class="current" href="index.html">Home
-              <img class= "icon" src= "img/Icons/icons8-home-50.png" alt= "A House">
-            </a> 
-            <div class="logo-img"> 
-               <img class="logo" src="img/fox-5.png" alt="Sauti's Africa logo.">
+          <nav class="nav_bar"> 
+            <a class="signIn" href="signin.html">Sign In</a>
+            <a class="signUp" href="signup.html">Sign Up</a> 
+            <a href="about.html">About Us</a>  
+            <a class="current" href="index.html">Home</a> 
+              <div class="logo-img"> 
+                <img class="logo" src="img/fox-5.png" alt="Sauti's Africa logo.">
+            </div>  
            </div>  
           </nav>
         </header>
@@ -101,6 +93,35 @@
   </nav>
  </footer>
 </div>
+<!-- Michelle.RH started her work here, Date:01/07/2020 --> 
+<div class="mobileNav"> 
+    <div class= "tab">
+      <a class="signIn" href="signin.html">
+        <p>Sign In</p>
+        <img class= "icon" src= "img/Icons/icons8-enter-50.png" alt= "Arrow Going Inside">
+      </a>
+    </div>
+    <div class= "tab">
+      <a class="signUp" href="signup.html">
+        <p>Sign Up</p>
+        <img class= "icon" src= "img/Icons/icons8-sign-up-50.png" alt= "Pencil with Squiggle Mark">
+      </a> 
+    </div>
+    <div class= "tab">
+      <a href="about.html">
+        <p>About Us</p>
+        <img class= "icon" src= "img/Icons/icons8-about-50.png" alt= "Informational lowercase i">
+      </a> 
+    </div> 
+    <div class= "tab">
+        <a class="current" href="index.html">
+          <p>Home</p>
+          <img class= "icon" src= "img/Icons/icons8-home-50.png" alt= "A House">
+        </a> 
+  </div>
+</div>
+<!-- Michelle.RH ended her work here, Date:TBD --> 
+
 <script src="js/slider.js"></script>  
   <!-- Ended by IRAJ, Date:12/19/2019 -->
 </body> 
