fixed mobile nav

--- a/index.html
+++ b/index.html
@@ -96,26 +96,22 @@
 <!-- Michelle.RH started her work here, Date:01/07/2020 --> 
 <div class="mobileNav"> 
     <div class= "tab">
-      <a class="signIn" href="signin.html">
-        <p>Sign In</p>
+      <a class="signIn purple" href="signin.html">
         <img class= "icon" src= "img/Icons/icons8-enter-50.png" alt= "Arrow Going Inside">
       </a>
     </div>
     <div class= "tab">
       <a class="signUp" href="signup.html">
-        <p>Sign Up</p>
         <img class= "icon" src= "img/Icons/icons8-sign-up-50.png" alt= "Pencil with Squiggle Mark">
       </a> 
     </div>
     <div class= "tab">
       <a href="about.html">
-        <p>About Us</p>
         <img class= "icon" src= "img/Icons/icons8-about-50.png" alt= "Informational lowercase i">
       </a> 
     </div> 
-    <div class= "tab">
-        <a class="current" href="index.html">
-          <p>Home</p>
+    <div class= "tab active">
+        <a href="index.html">
           <img class= "icon" src= "img/Icons/icons8-home-50.png" alt= "A House">
         </a> 
   </div>
