Cleaned up some code in the mobileNav

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <!-- Michelle.RH started her work here, Date:01/07/2020 --> 
 <div class="mobileNav"> 
     <div class= "tab">
-      <a class="signIn purple" href="signin.html">
+      <a class="signIn" href="signin.html">
         <img class= "icon" src= "img/Icons/icons8-enter-50.png" alt= "Arrow Going Inside">
       </a>
     </div>
