added pics in about us age did some ui finsihing

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             </div>
             <div class="card-container" >
               <div class="card-img"> 
-                  <img src="img/Dummy-img.png" alt="Avatar">
+                  <img src="img/Michelle.jpg" alt="Avatar">
               </div>
               <div class="card-text card3">
                   <h4><b>Michelle RH</b></h4> 
@@ -85,28 +85,28 @@
             </div>
           <div class="card-container" >
             <div class="card-img">  
-              <img src="img/Dummy-img.png" alt="Avatar" >
+              <img src="img/Daniel.jpg" alt="Avatar" >
             </div>
             <div class="card-text card5">
               <h4><b>Daniel Morales</b></h4> 
               <p>React I Developer</p> 
               <div class="contact">
                 <a target="_blank" href="https://github.com/PrinceD96" ><i class="fab fa-github-square"></i></a>       
-                <a target="_blank" href="#" ><i class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/daniel-morales-a111b5186" ><i class="fab fa-linkedin"></i></a>
                 <a  href="mailto:daniel.a.moralesalt@gmail.com" ><i class="fas fa-at"></i></a>
               </div>
             </div>
           </div>
           <div class="card-container" >
             <div class="card-img"> 
-              <img src="img/Dummy-img.png" alt="Avatar">
+              <img src="img/Christian.png" alt="Avatar">
             </div>
             <div class="card-text card6">
               <h4><b>Christian Mack</b></h4> 
               <p>React II Developer</p> 
               <div class="contact">
                 <a target="_blank" href="https://github.com/SFMack" ><i class="fab fa-github-square"></i></a>       
-                <a target="_blank" href="#" ><i class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/chrismackca/" ><i class="fab fa-linkedin"></i></a>
                 <a  href="mailto:sfcamack@icloud.com" ><i class="fas fa-at"></i></a>
               </div>
             </div>
@@ -120,7 +120,7 @@
               <p>Backend Developer</p> 
               <div class="contact">
                 <a target="_blank" href="https://github.com/EvaGurtovaia" ><i class="fab fa-github-square"></i></a>       
-                <a target="_blank" href="#" ><i class="fab fa-linkedin"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/eva-gurtovaya-586baa124/" ><i class="fab fa-linkedin"></i></a>
                 <a  href="mailto:eva.gurtovaya@gmail.com" ><i class="fas fa-at"></i></a>
               </div>
             </div>
