--- a/signin.html
+++ b/signin.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
            <nav class="nav_bar">
-                <a class="current SignIn" href="signin.html">Sign In</a>
+                <a class="current signIn" href="signin.html">Sign In</a>
                 <a class="signUp" href="signup.html">Sign Up</a> 
                 <a href="about.html">About Us</a>  
                 <a  href="index.html">Home</a> 
