Replaced Lorem Ipsum. Added copy to smaller boxes.

--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 <section class="infoBoxes">
     <div>
         <h4>Empowering People</h4>
-        <p>How do we empower people..women? Cupcake ipsum dolor sit amet. Chocolate cake topping cotton candy cheesecake macaroon croissant sweet roll sesame snaps. Lollipop cake halvah. Oat cake cheesecake brownie tart.</p>
+        <p>How do we empower people..women? </p>
     </div>
     <div>
         <h4>Connecting Communities</h4>
-        <p>How do we connect communities? Cross-border partnerships. Cupcake ipsum dolor sit amet. Chocolate cake topping cotton candy cheesecake macaroon croissant sweet roll sesame snaps. Lollipop cake halvah. Oat cake cheesecake brownie tart.</p>
+        <p>Our platform gives our users the ability to access trade and market information via SMS technology on their phones. Our users can form cross-border partnerships without first having to travel to said market.</p>
     </div>
     <div>
         <h4>Growing Businesses</h4>
-        <p>How are businesses grown through this program? Cupcake ipsum dolor sit amet. Chocolate cake topping cotton candy cheesecake macaroon croissant sweet roll sesame snaps. Lollipop cake halvah. Oat cake cheesecake brownie tart.</p>
+        <p>Our users can verify market information, estimate their profit, learn the current exchange rate, estimate tax, and learn the requirements for clearing their goods through the border without even having to travel to the markets.</p>
     </div>
 </section>
 </div>
