Added copy to Empowering People box

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <section class="infoBoxes">
     <div>
         <h4>Empowering People</h4>
-        <p>How do we empower people..women? </p>
+        <p>Sauti means voice in Swahili and our mission is to empower cross-border traders to exercise their rights as citizens of the East African Community – able to trade freely and safely across borders and stand up for their rights with a loud and clear voice.</p>
     </div>
     <div>
         <h4>Connecting Communities</h4>
