--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       <img src="img/transaction.jpg" >
                       <h1>Trade and market information app</h1>
                       <h2>Empower cross-border traders to trade<br> legally, profitably, and safely</h2>
-                      <button><a href="signin.html" style="text-decoration: none;color: white;">LOGIN</a></button>                  
+                      <button><a href="https://quizzical-colden-62e06e.netlify.com/" style="text-decoration: none;color: white;">LOGIN</a></button>                  
                     </div>
                     
                     <div class="imgslide mySlides fade">
