--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                       <img src="img/africa_market.jpg "  >
                       <h1>Trade and market information app</h1>
                       <h2>Empower cross-border traders to trade<br> legally, profitably, and safely</h2>
-                      <button><a href="signin.html" style="text-decoration: none;color: white;">Login</a></button>
+                      <button><a href="https://quizzical-colden-62e06e.netlify.com/" style="text-decoration: none;color: white;">Login</a></button>
                     </div>
                     
                     <div class="imgslide mySlides fade">
                       <img src="img/ladyOnphone.jpg" >
                       <h1>Trade and market information app</h1>
                       <h2>Empower cross-border traders to trade <br>legally, profitably, and safely</h2>
-                      <button><a href="signin.html" style="text-decoration: none;color: white;">Login</a></button>
+                      <button><a href="https://quizzical-colden-62e06e.netlify.com/" style="text-decoration: none;color: white;">Login</a></button>
                     </div>
                     
                     </div>
